<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Récupère le focus-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>


        <LinearLayout
            android:background="@drawable/frame_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/frame_border">

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/ripple_photo">

                <ImageView
                    android:id="@+id/photo"
                    style="@style/image_profil"/>

            </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

            <TextView
                android:text="@string/profil_pseudo"
                style="@style/profil_send_textView"/>

            <EditText android:id="@+id/pseudoET"
                android:maxLength="10"
                style="@style/profil_send_edittext"/>
            <TextView android:id="@+id/pseudoTV"
                android:visibility="gone"
                android:layout_marginBottom="30dp"
                style="@style/profil_send_textView"/>

            <TextView
                android:text="@string/profil_tel"
                style="@style/profil_send_textView"/>

            <EditText android:id="@+id/tel"
                style="@style/edittext_tel"/>

            <Button
                android:id="@+id/saveProfil"
                style="@style/bouton"
                android:text="@string/profil_bouton"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>

